style.css
@font-face {
    font-family: MyriadBold; 
    src: url(./font/MyriadPro-Bold.otf);
}
@font-face {
    font-family: Myriad; 
    src: url(./font/MyriadPro-Regular.otf);
}
.reciflexLogo{
    width: 150px;
    height: 300px;
    fill: violet;
}
h1, h2, h3, h4, h5, h6, p, a, b, label{
    font-family: Myriad;
    text-decoration: none;
    color: rgb(73, 95, 63);
}
h1{
    font-family: MyriadBold;
    font-size: 2em;
}
b{font-family: MyriadBold;}
.title{text-align: center;}
.title img{width: 180px;}
.title span{position: absolute;}
.title p{font-size: 0.7em;}
.flexColumn{
    display: flex;
    flex-direction:column;
    justify-content: space-between;
}
.flexRow{
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-content: space-between;
}
body{
    display: flex;
    justify-content: center;
    background-color: rgb(73,95,63)
}
form{
    width: 400px;
    height: 570px;
    background-color: rgb(243, 253, 228);
    border-radius: 10px;
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    align-items: center;
}
.fields{
    width: 95%;
    height: 70%;
}
.fields p{font-family: MyriadBold;}

/* ==========Renderização========== */

.printMargin{
    margin-left: 10%;
    margin-right: 10%;
}

/* --Cabeçalho-- */

.developer{
    background-color:rgb(243, 253, 228);
    font-size: 0.6em;
    margin-bottom: 2%;
    padding: 1%;
}
.logo{
    max-width: 130px;
    max-height: 140px;
}
.company{
    justify-content: space-evenly;
    align-items: flex-start;
}
.company p{font-size: 0.8em;}

/* --Conteudo-- */

main{
    max-width: 960px;
    background-color: white;
    text-align: center;
}
main h1{
    margin-top: 3%;
    margin-bottom: 3%;
}
.content{
    text-indent: 2em;
    font-size: 1.4em;
    text-align: justify;
}

/* --Rodapé-- */

.footer{
    height: 5em;
    justify-content: space-around;
    align-items:flex-end;
}
.footer p{font: 1em Myriad;}
.printButtons{margin: 3%;}
.signature{
    align-items: center;
    text-align: center;
}
.signature img{width: 160px;}
.signature p{
    width: 12em;
    border-top: solid rgb(73, 95, 63) 0.4mm;
}

/* --Impressão-- */

.off{display: none;}

@page {size: A4;}
@media print{
    .printOff{display: none;}
    .developer{margin-top: 2%;}

